@@ -528,7 +528,7 @@
     text-align: right;
     padding-top: 5px;
     margin: 0;
-    left: 3px;
+    /*left: 3px;*/
     z-index: 3;
   }
 
@@ -1695,7 +1695,7 @@
 
   /*** begin ECMAScript Content Action Menus */
   .contentActions {
-    background-color: #cde2a7;
+    /*background-color: #cde2a7;*/
     border-left: 1px solid #74ae0b;
     border-right: 1px solid #74ae0b;
     color: #578308;
