@@ -4,6 +4,9 @@ Changelog
 1.0dev (unreleased)
 -------------------
 
+- Fixed some CSS declaratives from the Diazo Framework Classic theme
+  [macagua]
+
 - Fixed some NotFound 404 errors for images from css resources 
   into Diazo Framework Classic theme
   [macagua]
